# mwax_udp2sub

./: .clang-format  CMakeLists.txt  Makefile  README.md  design.md
src/: common.c  config.c  delaygen.c  heartbeat.c  makesub.c  metafits.c  mwax_udp2sub.c  mwax_udp2sub.h  packet_check.c  parse.c  receive.c  udpgrab_sml.c  vec3.h
util/: dw.c  mwa_update_header2.c  mwax_update_sub_header.py
